--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "PRABATH-MD~bOYgGBQA#6ZvuMmhGI_zGTnduuHwAvR-w16pui1SX6hHmh-6_aZk",
       "required": true
     },  
 
